[gd_scene load_steps=4 format=3 uid="uid://e8b4rmlw3os7"]

[ext_resource type="Script" path="res://Scenes/PowerUpShop/power_up_shop.gd" id="1_i7wan"]
[ext_resource type="Texture2D" uid="uid://csfpjy7aq0sj6" path="res://Assets/Images/power_up_run.png" id="2_w2mk5"]
[ext_resource type="Texture2D" uid="uid://b5vodidbe667c" path="res://Assets/Images/power_up_invis.png" id="3_otdpb"]

[node name="PowerUpShop" type="Node2D"]
script = ExtResource("1_i7wan")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -496.0
offset_top = -296.0
offset_right = 536.0
offset_bottom = 336.0
color = Color(0.336851, 0.449798, 0.513976, 1)

[node name="NutLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -264.0
offset_right = 154.0
offset_bottom = -219.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Collected nuts: 10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Speed" type="Node2D" parent="."]

[node name="SpeedLabel" type="Label" parent="Speed"]
offset_left = -120.0
offset_top = -32.0
offset_right = -72.0
offset_bottom = -9.0
text = "Speed"

[node name="RunPowerUp" type="TextureRect" parent="Speed"]
offset_left = -128.0
offset_right = -69.0
offset_bottom = 58.0
texture = ExtResource("2_w2mk5")

[node name="SpeedUnlockButton" type="Button" parent="Speed"]
offset_left = -168.0
offset_top = 64.0
offset_right = -18.0
offset_bottom = 95.0
text = "Unlock for 10 nuts"

[node name="SpeedIncreaseButton" type="Button" parent="Speed"]
visible = false
offset_left = -184.0
offset_top = 64.0
offset_bottom = 95.0
text = "Speed + 10%"

[node name="Invis" type="Node2D" parent="."]

[node name="InvisLabel" type="Label" parent="Invis"]
offset_left = 64.0
offset_top = -32.0
offset_right = 143.0
offset_bottom = -9.0
text = "Invisibility
"

[node name="InvisPowerUp" type="TextureRect" parent="Invis"]
offset_left = 64.0
offset_right = 130.0
offset_bottom = 59.0
texture = ExtResource("3_otdpb")

[node name="InvisUnlockButton" type="Button" parent="Invis"]
offset_left = 32.0
offset_top = 64.0
offset_right = 182.0
offset_bottom = 95.0
text = "Unlock for 10 nuts"

[node name="InvisIncreaseButton" type="Button" parent="Invis"]
visible = false
offset_left = 24.0
offset_top = 64.0
offset_right = 215.0
offset_bottom = 95.0
text = "Invisibilty time + 0.1 sec"

[connection signal="pressed" from="Speed/SpeedUnlockButton" to="." method="_on_speed_unlock_button_pressed"]
[connection signal="pressed" from="Speed/SpeedIncreaseButton" to="." method="_on_speed_increase_button_pressed"]
[connection signal="pressed" from="Invis/InvisUnlockButton" to="." method="_on_invis_unlock_button_pressed"]
[connection signal="pressed" from="Invis/InvisIncreaseButton" to="." method="_on_invis_increase_button_pressed"]
